--- a/Handout_09.html
+++ b/Handout_09.html
@@ -38,9 +38,9 @@
 
 
           <h2>Class Work</h2>
-          <p> We'll cover the Fourteenth Amendment
+          <p> We'll cover the Fourteenth Amendment. We'll also review some writing tips for the second short paper, based on results from the first short paper. (I'll give some word choice tips, some organization tips, and give a rubric which might be instructive.)
 
-            <h2>Homework 08</h2>
+            <h2>Homework 09</h2>
 
             <p>Working with groups is encouraged. Designate someone to turn in a single copy, with all group members' names, on Blackboard.</p>
 
