--- a/Handout_14.html
+++ b/Handout_14.html
@@ -28,7 +28,7 @@
       <p> Skim Chapter 44. Be familiar with the major federal consumer protection laws.
 
 
-        <p><em>Suggested (minimum!) time use:</em> 30 minutes to read the chapter as suggested above, 60 minutes to do the homework below, 30 minutes for short paper work, either revising paper 2 or starting paper 3.</p>
+        <p><em>Suggested (minimum!) time use:</em> 30 minutes to read the chapter as suggested above, 60 minutes to do the homework below, 30 minutes for short paper work, either revising paper 2 or starting <a href="https://docs.google.com/document/d/1N7qJGCVBvVDEztDtWYX3jirtVL3wm2_arDpbCwS0CSM/edit?usp=sharing">short paper 3</a>.</p>
 
 
 
@@ -51,7 +51,7 @@
               <li>Work problem 43-8, on judicial deference to a decision about coal mining safety.</li>
               <li>Find a proposed rule on the Federal Register. Which agency proposed the rule? Which federal statute is the rule based on?</li>
               <li>Work problem 44-1, on unsolicited merchandise.</li>
-              <li>Work problem 44-4, on tobacco advertisements. Assume the federal law did not provide details as to what the advertisements contained.</li>
+              <li>Work problem 44-4, on tobacco advertisements. Assume the federal law did not provide details as to what the advertisements may contain.</li>
             </ol>
 
             <h2>Next time ....</h2>
