--- a/handouts.html
+++ b/handouts.html
@@ -231,7 +231,8 @@
 
 
                               <h2 id="Lesson2">Lesson 2: Law stemming from the Constitution</h2>
-                              <p>This section will examine the law flowing from the Constitution: (1) constitutional law itself, particularly criminal procedure, (2) statutory interpretation through antitrust law, and (3) administrative law, particularly
+                              <p>This section will examine the law flowing from the Constitution: (1) constitutional law itself, particularly criminal procedure, (2) statutory interpretation through antitrust law, and (3) administrative law,
+                                particularly
                                 through environmental and employment law. The reading on the Constitution and statutory law is:</p>
 
                               <ul>
@@ -287,45 +288,49 @@
                                                   <p><a href="https://prezi.com/avwstg-ycskr/environmental-law-2017/?utm_campaign=share&utm_medium=copy" target="_blank">Environmental law Prezi</a>
 
 
+                                                    <p><a href="Handout_16" target="_blank">Handout 16</a>
+
+                                                      <p><a href="https://prezi.com/pambgx7smrrs/employment-updated/" target="_blank">Employment law Prezi</a>
 
 
 
 
 
 
-
-                                                    <h2 id="Lesson2">Lesson 3: Business organizations</h2>
-                                                    <p>As a very large special case of statutory law, we'll examine ways to protect yourself from liability through business organizations in this section. We'll study corporations, partnerships, LLCs, and
-                                                      securities regulation. We haven't included these sections in our book, so the reading will be TBA.<label for="sn-extensive-use-of-sidenotes" class="margin-toggle sidenote-number"></label><input type="checkbox"
+                                                        <h2 id="Lesson2">Lesson 3: Business organizations</h2>
+                                                        <p>As a very large special case of statutory law, we'll examine ways to protect yourself from liability through business organizations in this section. We'll study corporations, partnerships,
+                                                          LLCs, and
+                                                          securities regulation. We haven't included these sections in our book, so the reading will be TBA.<label for="sn-extensive-use-of-sidenotes" class="margin-toggle sidenote-number"></label><input type="checkbox"
                                                         id="sn-extensive-use-of-sidenotes" class="margin-toggle" /><span class="sidenote">For this small section, we will have a quiz rather than a test.</span></p>
 
 
 
-                                                    <h2 id="Lesson4">Lesson 4: Common law part 1 (involuntary obligations)</h2>
-                                                    <p>In this section we'll study tort and property law, the common law obligations imposed involuntarily.</p>
-                                                    <ul>
-                                                      <li>Chapter 5: Torts</li>
-                                                      <li>Chapter 6: Strict liability torts</li>
-                                                      <li>Chapter 48: Personal property</li>
-                                                      <li>Chapter 49: Real property</li>
+                                                        <h2 id="Lesson4">Lesson 4: Common law part 1 (involuntary obligations)</h2>
+                                                        <p>In this section we'll study tort and property law, the common law obligations imposed involuntarily.</p>
+                                                        <ul>
+                                                          <li>Chapter 5: Torts</li>
+                                                          <li>Chapter 6: Strict liability torts</li>
+                                                          <li>Chapter 48: Personal property</li>
+                                                          <li>Chapter 49: Real property</li>
+                                                          <li>Chapter 10: Intellectual property</li>
 
-                                                    </ul>
-                                                    <p>After that, we'll move to administrative law as applied to the environment and employment.</p>
-
-
-
-
-                                                    <h2 id="Lesson5">Lesson 5: Common law part 2 (voluntary obligations)</h2>
-                                                    <p>The law of contracts. The reading is:</p>
+                                                        </ul>
+                                                        <p>After that, we'll move to administrative law as applied to the environment and employment.</p>
 
 
-                                                    <ul>
 
-                                                      <li>Chapters 11-19: The common law of contracts</li>
-                                                      <li>Chapter 23: Warranties</li>
-                                                    </ul>
 
-                                                    <p>and a little TBA reading on the UCC.</p>
+                                                        <h2 id="Lesson5">Lesson 5: Common law part 2 (voluntary obligations)</h2>
+                                                        <p>The law of contracts. The reading is:</p>
+
+
+                                                        <ul>
+
+                                                          <li>Chapters 11-19: The common law of contracts</li>
+                                                          <li>Chapter 23: Warranties</li>
+                                                        </ul>
+
+                                                        <p>and a little TBA reading on the UCC.</p>
 
     </div>
 
