--- a/Handout_17.html
+++ b/Handout_17.html
@@ -4,7 +4,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-  <title>BSAD234_Handout_16</title>
+  <title>BSAD234_Handout_17</title>
   <link rel="stylesheet" href="./tufte.css">
   <link rel="stylesheet" href="./latex.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -17,7 +17,7 @@
 
   <article>
     <h1>Employment Law</h1>
-    <p class="subtitle">Handout 16</p>
+    <p class="subtitle">Handout 17</p>
     <section>
 
 
@@ -42,9 +42,23 @@
             <h2>Class Work</h2>
             <p> We'll do a lecture on environmental law, with particular attention to how administrative law principles play out in this setting.
 
-              <h2>Homework 16</h2>
-              <p>
-                None. (Handout 17 posted Monday will contain some environmental law homework.) Focus on review and Short Paper 3.
+              <h2>Homework 17</h2>
+              <p> We're going to revisit the cases we discussed in class--the cases are key in this chapter, as they reinforce administrative and criminal law principles and teach environmental law.
+
+                <ol>
+                  <li>Work through Question 2 following the <em>Friends of the Animals</em> case. </li>
+                  <li>In <em>United States v. O'Malley</em>, the mental state in the statute at issue was "knowingly violate."
+                    <ol type="a">
+
+
+                      <li>How did O'Malley satisfy this mental state?</li>
+                      <li>If the mental state had been strict liability, would O'Malley have been convicted?</li>
+                      <li>If the mental state had been specific intent, would O'Malley have been convicted? (Make any assumptions you need based on the text of the case to take a stance one way or the other.)</li>
+                  </li>
+
+                </ol>
+                <li>At the end of the <em>Riverkeeper</em> case, answer the two Critical Thinking questions. </li>
+                </ol>
 
                 <h2>Next time ....</h2>
 
