--- a/handouts.html
+++ b/handouts.html
@@ -132,10 +132,10 @@
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
-        <span class="icon-bar"></span>
-        <!-- <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <!-- <span class="icon-bar"></span>
         <span class="icon-bar"></span> -->
-      </button>
+          </button>
           <a class="navbar-brand" href="index.html">BSAD 234</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
@@ -267,8 +267,8 @@
 
 
 
-                                            <p>After that, we'll move to administrative law as applied to the environment and employment.<label for="sn-extensive-use-of-sidenotes" class="margin-toggle sidenote-number"></label><input type="checkbox" id="sn-extensive-use-of-sidenotes"
-                                                class="margin-toggle" /><span class="sidenote">We'll also do a brief lecture on agency law, without reading.</span></p>
+                                            <p>After that, we'll move to administrative law as applied to the environment and employment.<label for="sn-extensive-use-of-sidenotes" class="margin-toggle sidenote-number"></label><input type="checkbox"
+                                                id="sn-extensive-use-of-sidenotes" class="margin-toggle" /><span class="sidenote">We'll also do a brief lecture on agency law, without reading.</span></p>
                                             <ul>
 
                                               <li>Chapter 43: Administrative law</li>
@@ -293,44 +293,45 @@
                                                       <p><a href="https://prezi.com/pambgx7smrrs/employment-updated/" target="_blank">Employment law Prezi</a>
 
 
+                                                        <p><a href="Handout_17" target="_blank">Handout 17</a>
 
 
 
 
-                                                        <h2 id="Lesson2">Lesson 3: Business organizations</h2>
-                                                        <p>As a very large special case of statutory law, we'll examine ways to protect yourself from liability through business organizations in this section. We'll study corporations, partnerships,
-                                                          LLCs, and
-                                                          securities regulation. We haven't included these sections in our book, so the reading will be TBA.<label for="sn-extensive-use-of-sidenotes" class="margin-toggle sidenote-number"></label><input type="checkbox"
-                                                        id="sn-extensive-use-of-sidenotes" class="margin-toggle" /><span class="sidenote">For this small section, we will have a quiz rather than a test.</span></p>
+                                                          <h2 id="Lesson2">Lesson 3: Business organizations</h2>
+                                                          <p>As a very large special case of statutory law, we'll examine ways to protect yourself from liability through business organizations in this section. We'll study corporations, partnerships,
+                                                            LLCs, and
+                                                            securities regulation. We haven't included these sections in our book, so the reading will be TBA.<label for="sn-extensive-use-of-sidenotes" class="margin-toggle sidenote-number"></label><input
+                                                              type="checkbox" id="sn-extensive-use-of-sidenotes" class="margin-toggle" /><span class="sidenote">For this small section, we will have a quiz rather than a test.</span></p>
 
 
 
-                                                        <h2 id="Lesson4">Lesson 4: Common law part 1 (involuntary obligations)</h2>
-                                                        <p>In this section we'll study tort and property law, the common law obligations imposed involuntarily.</p>
-                                                        <ul>
-                                                          <li>Chapter 5: Torts</li>
-                                                          <li>Chapter 6: Strict liability torts</li>
-                                                          <li>Chapter 48: Personal property</li>
-                                                          <li>Chapter 49: Real property</li>
-                                                          <li>Chapter 10: Intellectual property</li>
+                                                          <h2 id="Lesson4">Lesson 4: Common law part 1 (involuntary obligations)</h2>
+                                                          <p>In this section we'll study tort and property law, the common law obligations imposed involuntarily.</p>
+                                                          <ul>
+                                                            <li>Chapter 5: Torts</li>
+                                                            <li>Chapter 6: Strict liability torts</li>
+                                                            <li>Chapter 48: Personal property</li>
+                                                            <li>Chapter 49: Real property</li>
+                                                            <li>Chapter 8: Intellectual property</li>
 
-                                                        </ul>
-                                                        <p>After that, we'll move to administrative law as applied to the environment and employment.</p>
-
-
+                                                          </ul>
+                                                          <p>After that, we'll move to administrative law as applied to the environment and employment.</p>
 
 
-                                                        <h2 id="Lesson5">Lesson 5: Common law part 2 (voluntary obligations)</h2>
-                                                        <p>The law of contracts. The reading is:</p>
 
 
-                                                        <ul>
+                                                          <h2 id="Lesson5">Lesson 5: Common law part 2 (voluntary obligations)</h2>
+                                                          <p>The law of contracts. The reading is:</p>
 
-                                                          <li>Chapters 11-19: The common law of contracts</li>
-                                                          <li>Chapter 23: Warranties</li>
-                                                        </ul>
 
-                                                        <p>and a little TBA reading on the UCC.</p>
+                                                          <ul>
+
+                                                            <li>Chapters 11-19: The common law of contracts</li>
+                                                            <li>Chapter 23: Warranties</li>
+                                                          </ul>
+
+                                                          <p>and a little TBA reading on the UCC.</p>
 
     </div>
 
