--- a/Handout_17.html
+++ b/Handout_17.html
@@ -16,7 +16,7 @@
 
 
   <article>
-    <h1>Employment Law</h1>
+    <h1>Employment Law, continued</h1>
     <p class="subtitle">Handout 17</p>
     <section>
 
@@ -40,7 +40,7 @@
 
 
             <h2>Class Work</h2>
-            <p> We'll do a lecture on environmental law, with particular attention to how administrative law principles play out in this setting.
+            <p> We'll keep working through employment law.
 
               <h2>Homework 17</h2>
               <p> We're going to revisit the cases we discussed in class--the cases are key in this chapter, as they reinforce administrative and criminal law principles and teach environmental law.
