--- a/Handout_17.html
+++ b/Handout_17.html
@@ -33,8 +33,7 @@
         <p>If it's helpful, <a href="https://drive.google.com/a/truman.edu/file/d/1AMOKG2o7m4JpceFT7LkLeM7okrXj3ACH/view?usp=drive_open" target="_blank">here is a chapter outline</a>. There is also a <a href="https://drive.google.com/open?id=14DqBOkm76k0pPhAGQmA6DbMDNn0wdWtv"
             target="_blank">student-created supplement on the text</a>.
 
-          <p><em>Suggested (minimum!) time use:</em> 60 minutes to read the chapters as suggested above, 15 minutes for your continuous review, and 45 minutes on <a href="https://docs.google.com/document/d/1N7qJGCVBvVDEztDtWYX3jirtVL3wm2_arDpbCwS0CSM/edit?usp=sharing">short
-              paper 3</a>.</p>
+          <p><em>Suggested (minimum!) time use:</em> Two hours. Focus on the homework, if you have time left then keep reading the employment law chapters.</p>
 
           <p>
 
