--- a/Handout_09.html
+++ b/Handout_09.html
@@ -22,7 +22,7 @@
 
 
 
-      <h2>Reading</h2>
+      <h2>Readings</h2>
 
 
       <p>Chapter 4. As we study constitutional law, I'm going to add to the book quite a bit. So pay particular attention to the slides.
@@ -30,7 +30,8 @@
 
         <p><em>Suggested (minimum!) time use:</em> 60 minutes to do the homework, 60 minutes to continue with <a href="https://drive.google.com/open?id=1olWvEeL82hHqxVL995IugX_xwohdHY-gb0PhBNn395M">short paper #2</a>.</p>
 
-        <p>If it's helpful, <a href="https://drive.google.com/file/d/1xlIxkgmmejKNhkTC7pSJWvoeYvaLcGhS/view" target="_blank">here is a chapter outline</a>. There is also <a href="https://drive.google.com/open?id=166BSkIPsIOBWxAh88DSKgfouE0-39mlk" target="_blank">student-created supplement on the text</a>,
+        <p>If it's helpful, <a href="https://drive.google.com/file/d/1xlIxkgmmejKNhkTC7pSJWvoeYvaLcGhS/view" target="_blank">here is a chapter outline</a>. There is also <a href="https://drive.google.com/open?id=166BSkIPsIOBWxAh88DSKgfouE0-39mlk"
+            target="_blank">student-created supplement on the text</a>,
           <a href="https://drive.google.com/open?id=15NWCTbNXKWGSw9GPgZLC3h0RuerbHJsQ">and amendments</a> if you feel like another take on the chapter would be useful. The slides used in class are <a href="https://drive.google.com/open?id=1YhStw5XBOic2imTMSnHNi1lIJqEFwPlkjMHvt0nQOlM">here</a>.
         </p>
 
@@ -38,7 +39,8 @@
 
 
           <h2>Class Work</h2>
-          <p> We'll cover the Fourteenth Amendment. We'll also review some writing tips for the second short paper, based on results from the first short paper. (I'll give some word choice tips, some organization tips, and give a rubric which might be instructive.)
+          <p> We'll cover the Fourteenth Amendment. We'll also review some writing tips for the second short paper, based on results from the first short paper. (I'll give some word choice tips, some organization tips, and give a rubric which might
+            be instructive.)
 
             <h2>Homework 09</h2>
 
