--- a/handouts.html
+++ b/handouts.html
@@ -304,6 +304,10 @@
 
             <p><a href="Handout_18" target="_blank">Handout 18</a>
 
+<p> <a href="https://docs.google.com/presentation/d/1TJRBM8W2VaoUk6fCrVP96HmUgsTeeDDdr2bZ3U-MjBA/edit?usp=sharing">Slide deck for business organizations.</a>  </p>
+
+
+
 
                   <h2 id="Lesson4">Lesson 4: Common law part 1 (involuntary obligations)</h2>
                       <p>In this section we'll study tort and property law, the common law obligations imposed involuntarily.</p>
