--- a/Handout_18.html
+++ b/Handout_18.html
@@ -41,7 +41,7 @@
             <p> We'll start a lecture on business organizations. We'll walk quickly through the major business entities, with their advantages and disadvantages.
 
               <h2>Homework 18</h2>
-              <p> This homework will start you into the process and problems with organizing a business. It will be due Tuesday night at 11:00pm.
+              <p> This homework will start you into the process and problems with organizing a business. It will be due Wednesday night at 11:00pm.
 
                 <ol>
 <li>What are the major benefits and costs of operating a sole proprietorship? </li>
@@ -75,5 +75,5 @@
 
                 <h2>Next time ....</h2>
 
-                <p>We'll continue with business organizations by walking through the homework and doing a practical example.
+                <p>We'll continue with business organizations by walking through some of the homework, doing a practical example, and examining litigation against an LLC.
                 </p>
