--- a/handouts.html
+++ b/handouts.html
@@ -306,6 +306,8 @@
 
 <p> <a href="https://docs.google.com/presentation/d/1TJRBM8W2VaoUk6fCrVP96HmUgsTeeDDdr2bZ3U-MjBA/edit?usp=sharing">Slide deck for business organizations.</a>  </p>
 
+<p><a href="https://www.youtube.com/watch?v=zFFRo_BNwoA">Video lecture on securities law</a>  </p>
+
 
 
 
@@ -319,13 +321,13 @@
                                                               <li>Chapter 8: Intellectual property</li>
 
                                                             </ul>
-                                                            <p>After that, we'll move to administrative law as applied to the environment and employment.</p>
 
 
 
 
-                                                            <h2 id="Lesson5">Lesson 5: Common law part 2 (voluntary obligations)</h2>
-                                                            <p>The law of contracts. The reading is:</p>
+
+                      <h2 id="Lesson5">Lesson 5: Common law part 2 (voluntary obligations)</h2>
+                        <p>The law of contracts. The reading is:</p>
 
 
                                                             <ul>
