--- a/handouts.html
+++ b/handouts.html
@@ -322,8 +322,13 @@
 
                                                             </ul>
 
+                                          <h3>Handouts and Slides</h3>
 
 
+                                              <p><a href="Handout_19" target="_blank">Handout 19</a>
+
+                                                <p><a href="https://drive.google.com/open?id=1ghEGHoRpFFMhHNeOKqjBiFccqs2e0hBx
+" target="_blank">Tort Law Slides</a>
 
 
                       <h2 id="Lesson5">Lesson 5: Common law part 2 (voluntary obligations)</h2>
