--- a/handouts.html
+++ b/handouts.html
@@ -329,7 +329,8 @@
 
                                                 <p><a href="https://drive.google.com/open?id=1ghEGHoRpFFMhHNeOKqjBiFccqs2e0hBx
 " target="_blank">Tort Law Slides</a>
-
+<p><a href="Handout_19" target="_blank">Handout 19</a>
+  <p><a href="Handout_20" target="_blank">Handout 20</a>
 
                       <h2 id="Lesson5">Lesson 5: Common law part 2 (voluntary obligations)</h2>
                         <p>The law of contracts. The reading is:</p>
