--- a/Handout_20.html
+++ b/Handout_20.html
@@ -40,6 +40,11 @@
             <h2>Class Work</h2>
             <p> We'll cover negligence together and then work examples.
 
+
+              <h2>Strict liability lecture</h2>
+
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/J6t3F79CRjw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
               <h2>Homework 20</h2>
               <p>
 <ol>
