--- a/handouts.html
+++ b/handouts.html
@@ -331,6 +331,7 @@
 " target="_blank">Tort Law Slides</a>
   <p><a href="Handout_20" target="_blank">Handout 20</a>
     <p><a href="Handout_21" target="_blank">Handout 21</a>
+      <p><a href="Handout_22" target="_blank">Handout 22</a>
 
                       <h2 id="Lesson5">Lesson 5: Common law part 2 (voluntary obligations)</h2>
                         <p>The law of contracts. The reading is:</p>
