--- a/handouts.html
+++ b/handouts.html
@@ -327,10 +327,12 @@
 
                                               <p><a href="Handout_19" target="_blank">Handout 19</a>
 
-                                                <p><a href="https://drive.google.com/open?id=1ghEGHoRpFFMhHNeOKqjBiFccqs2e0hBx
-" target="_blank">Tort Law Slides</a>
+                                                <p><a href="https://drive.google.com/open?id=1ghEGHoRpFFMhHNeOKqjBiFccqs2e0hBx" target="_blank">Tort Law Slides</a>
   <p><a href="Handout_20" target="_blank">Handout 20</a>
+    <p><a href="https://drive.google.com/open?id=1PJ1kkQ_BxUhpfek61To4w5RNSNqfR6ORWnyutqaa_Pc" target="_blank">Property Law Slides</a>
+
     <p><a href="Handout_21" target="_blank">Handout 21</a>
+      <p><a href="https://drive.google.com/open?id=183PqvLMbBIl0G4f5yhxhhtYv0fo-J3aF6Dp8zD6dNUw" target="_blank">IP Law Slides</a>
       <p><a href="Handout_22" target="_blank">Handout 22</a>
 
                       <h2 id="Lesson5">Lesson 5: Common law part 2 (voluntary obligations)</h2>
@@ -342,6 +344,15 @@
                                                               <li>Chapters 11-19: The common law of contracts</li>
                                                               <li>Chapter 23: Warranties</li>
                                                             </ul>
+
+
+                                                            <h3>Handouts and Slides</h3>
+
+                                                            <p><a href="https://drive.google.com/open?id=17-H0H2ZXgFep0qRatShCmTYIg2p6m6f7WiQpdjce63Y" target="_blank">Contract Slides, Part 1</a>
+
+
+                                                            <p><a href="Handout_23" target="_blank">Handout 23</a>
+
 
                                                             <p>and a little TBA reading on the UCC.</p>
 
