--- a/Handout_23.html
+++ b/Handout_23.html
@@ -4,7 +4,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-  <title>BSAD234_Handout_22</title>
+  <title>BSAD234_Handout_23</title>
   <link rel="stylesheet" href="./tufte.css">
   <link rel="stylesheet" href="./latex.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,7 +16,7 @@
 
 
   <article>
-    <h1>Contract Law, Part 1</h1>
+    <h1>Contract Law</h1>
     <p class="subtitle">Handout 23</p>
     <section>
 
