--- a/handouts.html
+++ b/handouts.html
@@ -348,10 +348,13 @@
 
                                                             <h3>Handouts and Slides</h3>
 
-                                                            <p><a href="https://drive.google.com/open?id=17-H0H2ZXgFep0qRatShCmTYIg2p6m6f7WiQpdjce63Y" target="_blank">Contract Slides, Part 1</a>
+                                                            <p><a href="https://drive.google.com/open?id=17-H0H2ZXgFep0qRatShCmTYIg2p6m6f7WiQpdjce63Y" target="_blank">Contract Slides</a>
+                                                            <p><a href="https://prezi.com/ro1bqqiblbtb/warranty-2017/" target="_blank">Warranty Prezi</a>
 
 
                                                             <p><a href="Handout_23" target="_blank">Handout 23</a>
+
+                                                              <p><a href="Handout_24" target="_blank">Handout 24</a>
 
 
                                                             <p>and a little TBA reading on the UCC.</p>
